--- a/Raw-Node-API-Monitoring-App/package.json
+++ b/Raw-Node-API-Monitoring-App/package.json
@@ -1,9 +1,10 @@
 {
-	"name": "raw-node-api-project",
+	"name": "raw-node",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "nodemon index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Prionto",
