--- a/Raw-Node-API-Monitoring-App/package.json
+++ b/Raw-Node-API-Monitoring-App/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon index.js",
+		"start": "SET NODE_ENV=staging && nodemon index",
+		"production": "SET NODE_ENV=production && nodemon index",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Prionto",
