Create own CRUD Liberary

--- a/Raw-Node-API-Monitoring-App/.eslintrc.json
+++ b/Raw-Node-API-Monitoring-App/.eslintrc.json
@@ -13,7 +13,7 @@
     "prettier/prettier": [
       "error",
       {
-        "trailingComma": "<es5|none|all>",
+        "trailingComma": "es6",
         "singleQuote": true,
         "printWidth": 100,
         "tabWidth": 4,
