--- a/practice-express/package.json
+++ b/practice-express/package.json
@@ -11,7 +11,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
+		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"mongodb": "^3.6.3"
 	},
