--- a/Node-mongo-CRUD/package.json
+++ b/Node-mongo-CRUD/package.json
@@ -13,7 +13,8 @@
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.3"
+		"mongodb": "^3.6.3",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.6"
