--- a/practice-express/package.json
+++ b/practice-express/package.json
@@ -15,7 +15,8 @@
 		"cors": "^2.8.5",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.3"
+		"mongodb": "^3.6.3",
+		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.6"
