--- a/Contacts-List-App/package.json
+++ b/Contacts-List-App/package.json
@@ -11,7 +11,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^10.0.0",
+		"ejs": "^3.1.6",
 		"express": "^4.17.1",
+		"mongoose": "^5.12.11",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
