--- a/Contacts-List-App/package.json
+++ b/Contacts-List-App/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Contacts-List-App",
+	"name": "contacts-list-app",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -11,9 +11,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.11",
 		"morgan": "^1.10.0"
 	},
